<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/newsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/bck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/toolbarbck_btn"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_gravity="center"
                android:background="@drawable/back_ground_circle"
                android:src="@drawable/chevron_left"
                app:tint="@color/btn_clr" />

        </LinearLayout>
        <!--Header Text-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/todays_news"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/commonFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_45sdp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_app_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="bottom"
        android:background="@color/bg_grey"
        android:backgroundTint="@color/bg_grey"
        app:fabAlignmentMode="center"
        app:fabCradleRoundedCornerRadius="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="BottomAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/weatherBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/modulebtn"
                app:layout_constraintEnd_toStartOf="@+id/placeholder"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/modulebtn">

                <ImageView
                    android:id="@+id/weatherimg"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/rain"
                    app:tint="@color/buttonbg" />

                <TextView
                    android:id="@+id/weathertxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weather"
                    android:textColor="@color/buttonbg"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>


            <View
                android:id="@+id/placeholder"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/modulebtn"
                app:layout_constraintEnd_toStartOf="@+id/notificationbtn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/helpbtn"
                app:layout_constraintTop_toTopOf="@+id/modulebtn" />

            <LinearLayout
                android:id="@+id/newsBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/helpbtn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/newimg"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/news"
                    app:tint="@color/popup_darkgrey" />

                <TextView
                    android:id="@+id/newstxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textColor="@color/popup_darkgrey"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.constraintlayout.widget.ConstraintLayout>