<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weatherbg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/newsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/bck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/toolbarbck_btn"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_gravity="center"
                android:background="@drawable/back_ground_circle"
                android:src="@drawable/chevron_left"
                app:tint="@color/btn_clr" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:translationZ="2dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weatherimglr"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/locationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationName"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_35sdp" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/degree"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/temprature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:text=""
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weatherimglr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/sunrise"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/sunrisetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:layout_weight="1.46"
            android:background="@drawable/semicircle"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/sunset"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/sunsettime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherimglr"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/feels_like"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/visibility"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pressure"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>